[package]
name = "rusty-nail"
version = "0.1.0"
authors = ["Oliver Calder <olivercalder@protonmail.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.0"
miniz_oxide = "0.5.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
exitcode = "1.1.2"
clap = "2.34.0"
